; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_log.c_push_rev.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_log.c_push_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.log_state = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [33 x i8] c"Could not create revision walker\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"Could not find repository HEAD\00", align 1
@.str.2 = private unnamed_addr constant [37 x i8] c"Reference does not refer to a commit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.log_state*, i32*, i32)* @push_rev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_rev(%struct.log_state* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.log_state*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.log_state* %0, %struct.log_state** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.log_state*, %struct.log_state** %4, align 8
  %8 = getelementptr inbounds %struct.log_state, %struct.log_state* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %6, align 4
  %11 = xor i32 %9, %10
  store i32 %11, i32* %6, align 4
  %12 = load %struct.log_state*, %struct.log_state** %4, align 8
  %13 = getelementptr inbounds %struct.log_state, %struct.log_state* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %31, label %16

16:                                               ; preds = %3
  %17 = load %struct.log_state*, %struct.log_state** %4, align 8
  %18 = getelementptr inbounds %struct.log_state, %struct.log_state* %17, i32 0, i32 1
  %19 = load %struct.log_state*, %struct.log_state** %4, align 8
  %20 = getelementptr inbounds %struct.log_state, %struct.log_state* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @git_revwalk_new(i32* %18, i32 %21)
  %23 = call i32 @check_lg2(i32 %22, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32* null)
  %24 = load %struct.log_state*, %struct.log_state** %4, align 8
  %25 = getelementptr inbounds %struct.log_state, %struct.log_state* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.log_state*, %struct.log_state** %4, align 8
  %28 = getelementptr inbounds %struct.log_state, %struct.log_state* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @git_revwalk_sorting(i32 %26, i32 %29)
  br label %31

31:                                               ; preds = %16, %3
  %32 = load i32*, i32** %5, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %40, label %34

34:                                               ; preds = %31
  %35 = load %struct.log_state*, %struct.log_state** %4, align 8
  %36 = getelementptr inbounds %struct.log_state, %struct.log_state* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @git_revwalk_push_head(i32 %37)
  %39 = call i32 @check_lg2(i32 %38, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32* null)
  br label %60

40:                                               ; preds = %31
  %41 = load i32, i32* %6, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %51

43:                                               ; preds = %40
  %44 = load %struct.log_state*, %struct.log_state** %4, align 8
  %45 = getelementptr inbounds %struct.log_state, %struct.log_state* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @git_object_id(i32* %47)
  %49 = call i32 @git_revwalk_hide(i32 %46, i32 %48)
  %50 = call i32 @check_lg2(i32 %49, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i32* null)
  br label %59

51:                                               ; preds = %40
  %52 = load %struct.log_state*, %struct.log_state** %4, align 8
  %53 = getelementptr inbounds %struct.log_state, %struct.log_state* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 4
  %55 = load i32*, i32** %5, align 8
  %56 = call i32 @git_object_id(i32* %55)
  %57 = call i32 @git_revwalk_push(i32 %54, i32 %56)
  %58 = call i32 @check_lg2(i32 %57, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i32* null)
  br label %59

59:                                               ; preds = %51, %43
  br label %60

60:                                               ; preds = %59, %34
  %61 = load i32*, i32** %5, align 8
  %62 = call i32 @git_object_free(i32* %61)
  ret void
}

declare dso_local i32 @check_lg2(i32, i8*, i32*) #1

declare dso_local i32 @git_revwalk_new(i32*, i32) #1

declare dso_local i32 @git_revwalk_sorting(i32, i32) #1

declare dso_local i32 @git_revwalk_push_head(i32) #1

declare dso_local i32 @git_revwalk_hide(i32, i32) #1

declare dso_local i32 @git_object_id(i32*) #1

declare dso_local i32 @git_revwalk_push(i32, i32) #1

declare dso_local i32 @git_object_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
